traefik-ingresses/drone-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  namespace: default
spec:
  rules:
  - host: drone.mykube.awesome
    http:
      paths:
      - path: /
        backend:
          serviceName: drone-svc
          servicePort: 80
