traefik-ingresses/gogs-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs
  namespace: default
spec:
  rules:
  - host: git.mykube.awesome
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs-svc
          servicePort: 3000
