traefik-ingresses/linkerd-web-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linkerd-web
  namespace: linkerd
spec:
  rules:
  - host: linkerd-web.mykube.awesome
    http:
      paths:
      - path: /
        backend:
          serviceName: linkerd-web
          servicePort: 8084
